--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,11 @@
-
-
 .header {
     grid-area: h;
     background-color: green ;
 }
 .header img {
     width: 100px;
+}
+
+.loginBlock {
+    float: right;
 }
